--- a/Crud_App/Crud_App.csproj
+++ b/Crud_App/Crud_App.csproj
@@ -207,6 +207,8 @@
     <Content Include="Scripts\WebForms\WebForms.js" />
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
+    <Content Include="SignIn.aspx" />
+    <Content Include="SignUP.aspx" />
     <Content Include="Site.Master" />
     <Content Include="Update.aspx" />
     <Content Include="UpdateProduct.aspx" />
@@ -299,6 +301,20 @@
     </Compile>
     <Compile Include="Read.aspx.designer.cs">
       <DependentUpon>Read.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="SignIn.aspx.cs">
+      <DependentUpon>SignIn.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SignIn.aspx.designer.cs">
+      <DependentUpon>SignIn.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="SignUP.aspx.cs">
+      <DependentUpon>SignUP.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SignUP.aspx.designer.cs">
+      <DependentUpon>SignUP.aspx</DependentUpon>
     </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
