Unit Test Project added

--- a/Crud_App/Crud_App.csproj
+++ b/Crud_App/Crud_App.csproj
@@ -330,6 +330,7 @@
     <Compile Include="Site.Mobile.Master.designer.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
     </Compile>
+    <Compile Include="TestClass1.cs" />
     <Compile Include="Update.aspx.cs">
       <DependentUpon>Update.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
